--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/ayaxdeveloper/ayax-common-services.git"
   },
-  "author": "maphskiy",
+  "author": "ayaxdeveloper",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ayaxdeveloper/ayax-common-services/issues"
