--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
   },
   "homepage": "https://github.com/ayaxdeveloper/ayax-common-services#readme",
   "dependencies": {
-    "axios": "^0.17.1",
-    "ayax-common-types": "^1.4.0",
-    "moment": "^2.20.1"
+    "ayax-common-types": "^2.0.0"
   },
   "devDependencies": {}
 }
